--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,10 @@
           });
         },
         handleCommentSubmit: function(comment) {
+          var comments = this.state.data;
+          comment.id = Date.now();
+          var newComments = comments.concat([comment]);
+          this.setState({data: newComments});
           $.ajax({
             url: this.props.url,
             dataType: 'json',
@@ -44,6 +48,7 @@
               this.setState({data: data});
             }.bind(this),
             error: function(xhr, status, err) {
+              this.setState({data: comments});
               console.error(this.props.url, status, err.toString());
             }.bind(this)
           });
